--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
   </head>
   <body>
     <div class="content">
-      <h1>
-        &lt;h1&gt;<span>Hi, I'm Andreas!</span>&lt;/h1&gt;
-      </h1>
-      <p>
-        &lt;p&gt;<span>Global citizen 🌍 creative technologist ⌨️ interested in sports and nutrition ⚽️ shiny objects ⭐️
-        and everything that makes life more awesome 😃 🐐 🐼</span>&lt;/p&gt;
-      </p>
+      <h1>Hi, I'm Andreas!</h1>
+      <p>Global citizen 🌍 🌳 🏛 🏔 creative technologist ⌨ 🐹 interested in sports and nutrition ⚽️ shiny objects ⭐️
+        and everything that makes life more awesome 😃 🐐 🐼 🚀</p>
       <a href="https://www.linkedin.com/in/andreasgrossmann">
-        &lt;a&gt;<span>Click here for more information 📋</span>&lt;/a&gt;
+        => Click here for more information 📋
       </a>
     </div>
   </body>
